...
    ),
  );

  @override
  Widget build(BuildContext context) {
    final options = [
      _option(context, 'add_article_option', 'Añadir artículo', onAddArticle),
      _option(
        context,
        'add_category_option',
        'Añadir categoría',
        onAddCategory,
      ),
...
